--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "kurse",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Marks the entity with special trace identification.",
   "main": "kurse.js",
   "support": "kurse.support.js",
@@ -28,6 +28,7 @@
     "een": "^0.1.0",
     "kein": "^0.2.0",
     "harden": "^0.13.0",
-    "protype": "^0.8.0"
+    "protype": "^0.8.0",
+    "cuid": "^1.3.8"
   }
 }
