--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "kurse",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Marks the entity with special trace identification.",
   "main": "kurse.js",
   "support": "kurse.support.js",
@@ -29,6 +29,7 @@
     "kein": "^0.2.0",
     "harden": "^0.13.0",
     "protype": "^0.8.0",
-    "cuid": "^1.3.8"
+    "cuid": "^1.3.8",
+    "truly": "^0.5.0"
   }
 }
