--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "kurse",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Marks the entity with special trace identification.",
+  "main": "kurse.js",
   "support": "kurse.support.js",
   "deploy": "kurse.deploy.js",
   "scripts": {
