--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,13 @@
 {
   "name": "kurse",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Marks the entity with special trace identification.",
   "main": "kurse.js",
   "support": "kurse.support.js",
   "deploy": "kurse.deploy.js",
   "authors": [
-    "Richeve S. Bebedor <richeve.bebedor@gmail.com>"
+    "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
   ],
   "license": "MIT",
   "keywords": [
@@ -26,10 +27,10 @@
   ],
   "dependencies": {
     "cuid": "^1.3.8",
-    "een": "^0.1.0",
-    "kein": "^0.2.0",
-    "harden": "^0.13.0",
-    "protype": "^0.8.0",
-    "truly": "^0.5.0"
+    "een": "^0.3.0",
+    "harden": "^0.14.0",
+    "kein": "^0.8.0",
+    "protype": "^0.11.0",
+    "truly": "^0.9.0"
   }
 }
