--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,8 @@
 {
   "name": "kurse",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Marks the entity with special trace identification.",
-  "main": "kurse.js",
-  "support": "kurse.support.js",
-  "deploy": "kurse.deploy.js",
+  "main": "kurse.deploy.js",
   "authors": [
     "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
     "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
@@ -27,10 +25,10 @@
   ],
   "dependencies": {
     "cuid": "^1.3.8",
-    "een": "^0.3.0",
+    "een": "^0.4.0",
     "harden": "^0.14.0",
-    "kein": "^0.8.0",
-    "protype": "^0.11.0",
-    "truly": "^0.9.0"
+    "kein": "^0.9.0",
+    "protype": "^0.15.0",
+    "truly": "^0.11.0"
   }
 }
