--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "kurse",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Marks the entity with special trace identification.",
   "main": "kurse.js",
   "support": "kurse.support.js",
   "deploy": "kurse.deploy.js",
+  "browser": "kurse.deploy.js",
   "scripts": {
     "build": "babel kurse.js -o kurse.support.js && webpack",
     "test": "mocha kurse-test.js"
@@ -32,11 +33,11 @@
   "dependencies": {
     "babel-runtime": "^6.22.0",
     "cuid": "^1.3.8",
-    "een": "^0.3.0",
+    "een": "^0.4.0",
     "harden": "^0.14.0",
-    "kein": "^0.8.0",
-    "protype": "^0.11.0",
-    "truly": "^0.9.0"
+    "kein": "^0.9.0",
+    "protype": "^0.15.0",
+    "truly": "^0.11.0"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
@@ -44,6 +45,6 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
     "source-map-loader": "^0.1.6",
-    "webpack": "^1.14.0"
+    "webpack": "^2.2.1"
   }
 }
