--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,9 @@
 {
   "name": "kurse",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Marks the entity with special trace identification.",
   "main": "kurse.deploy.js",
+  "support": "kurse.support.js",
   "authors": [
     "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
     "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
@@ -25,10 +26,10 @@
   ],
   "dependencies": {
     "cuid": "^1.3.8",
-    "een": "^0.4.0",
-    "harden": "^0.14.0",
-    "kein": "^0.9.0",
-    "protype": "^0.15.0",
-    "truly": "^0.11.0"
+    "een": "^0.5.0",
+    "harden": "^0.16.0",
+    "kein": "^0.10.0",
+    "protype": "^0.17.0",
+    "truly": "^0.13.0"
   }
 }
