--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "kurse",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Marks the entity with special trace identification.",
   "main": "kurse.js",
   "support": "kurse.support.js",
   "deploy": "kurse.deploy.js",
   "browser": "kurse.deploy.js",
   "scripts": {
-    "build": "babel kurse.js -o kurse.support.js && webpack",
+    "build": "babel kurse.js --out-file kurse.support.js --source-maps && webpack --progress",
     "test": "mocha kurse-test.js"
   },
   "repository": {
@@ -31,18 +31,18 @@
   },
   "homepage": "https://github.com/volkovasystems/kurse#readme",
   "dependencies": {
-    "babel-runtime": "^6.22.0",
+    "babel-runtime": "^6.23.0",
     "cuid": "^1.3.8",
-    "een": "^0.4.0",
-    "harden": "^0.14.0",
-    "kein": "^0.9.0",
-    "protype": "^0.15.0",
-    "truly": "^0.11.0"
+    "een": "^0.5.0",
+    "harden": "^0.16.0",
+    "kein": "^0.10.0",
+    "protype": "^0.17.0",
+    "truly": "^0.13.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.22.0",
     "source-map-loader": "^0.1.6",
     "webpack": "^2.2.1"
