--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "kurse",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "Marks the entity with special trace identification.",
   "main": "kurse.js",
   "support": "kurse.support.js",
   "deploy": "kurse.deploy.js",
   "browser": "kurse.deploy.js",
   "scripts": {
-    "build": "babel kurse.js --out-file kurse.support.js --source-maps && webpack --progress",
+    "build": "babel kurse.js --out-file kurse.support.js --source-maps && webpack --progress --display-modules",
     "test": "mocha kurse-test.js"
   },
   "repository": {
@@ -33,7 +33,7 @@
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "cuid": "^1.3.8",
-    "een": "^0.5.0",
+    "een": "^0.7.0",
     "harden": "^0.16.0",
     "kein": "^0.10.0",
     "protype": "^0.17.0",
