--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "kurse",
-  "version": "0.14.0",
+  "version": "0.15.0",
   "description": "Marks the entity with special trace identification.",
   "main": "kurse.deploy.js",
   "support": "kurse.support.js",
@@ -24,12 +24,18 @@
     "test",
     "tests"
   ],
+  "resolutions": {
+    "fname": "^0.7.0"
+  },
   "dependencies": {
     "cuid": "^1.3.8",
     "een": "^0.18.0",
+    "fname": "^0.7.0",
     "harden": "^0.21.0",
     "kein": "^0.23.0",
+    "nmde": "^0.0.0",
     "protype": "^0.21.0",
-    "truly": "^0.18.0"
+    "truly": "^0.18.0",
+    "wichevr": "^0.9.0"
   }
 }
