--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kurse",
-  "version": "0.14.0",
+  "version": "0.15.0",
   "description": "Marks the entity with special trace identification.",
   "main": "kurse.js",
   "support": "kurse.support.js",
@@ -34,10 +34,13 @@
     "babel-runtime": "^6.23.0",
     "cuid": "^1.3.8",
     "een": "^0.18.0",
+    "fname": "^0.7.0",
     "harden": "^0.21.0",
     "kein": "^0.23.0",
+    "nmde": "^0.0.0",
     "protype": "^0.21.0",
-    "truly": "^0.18.0"
+    "truly": "^0.18.0",
+    "wichevr": "^0.9.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -45,6 +48,6 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "source-map-loader": "^0.2.1",
-    "webpack": "^2.4.1"
+    "webpack": "^2.5.0"
   }
 }
