--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "kurse",
-  "version": "0.16.0",
+  "version": "0.17.0",
   "description": "Marks the entity with special trace identification.",
   "main": "kurse.deploy.js",
   "support": "kurse.support.js",
@@ -24,15 +24,34 @@
     "test",
     "tests"
   ],
+  "resolutions": {
+    "harden": "^0.22.0",
+    "truly": "^0.19.0",
+    "fname": "^0.9.0",
+    "een": "^0.19.0",
+    "protype": "^0.22.0",
+    "wichevr": "^0.10.0",
+    "nmde": "^0.1.0",
+    "falzy": "^0.20.0",
+    "raze": "^0.30.0",
+    "doubt": "^0.27.0",
+    "eqe": "^0.3.0",
+    "cemento": "^0.16.0",
+    "mtch": "^0.2.0",
+    "stringe": "^0.4.0",
+    "kount": "^0.11.0",
+    "khount": "^0.1.0",
+    "nafe": "^0.3.0"
+  },
   "dependencies": {
     "cuid": "^1.3.8",
-    "een": "^0.18.0",
-    "fname": "^0.8.0",
-    "harden": "^0.21.0",
-    "kein": "^0.25.0",
-    "nmde": "^0.0.0",
-    "protype": "^0.21.0",
-    "truly": "^0.18.0",
-    "wichevr": "^0.9.0"
+    "een": "^0.19.0",
+    "fname": "^0.9.0",
+    "harden": "^0.22.0",
+    "mrkd": "^0.6.0",
+    "nmde": "^0.1.0",
+    "protype": "^0.22.0",
+    "truly": "^0.19.0",
+    "wichevr": "^0.10.0"
   }
 }
