--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kurse",
-  "version": "0.16.0",
+  "version": "0.17.0",
   "description": "Marks the entity with special trace identification.",
   "main": "kurse.js",
   "support": "kurse.support.js",
@@ -33,21 +33,21 @@
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "cuid": "^1.3.8",
-    "een": "^0.18.0",
-    "fname": "^0.8.0",
-    "harden": "^0.21.0",
-    "kein": "^0.25.0",
-    "nmde": "^0.0.0",
-    "protype": "^0.21.0",
-    "truly": "^0.18.0",
-    "wichevr": "^0.9.0"
+    "een": "^0.19.0",
+    "fname": "^0.9.0",
+    "harden": "^0.22.0",
+    "mrkd": "^0.6.0",
+    "nmde": "^0.1.0",
+    "protype": "^0.22.0",
+    "truly": "^0.19.0",
+    "wichevr": "^0.10.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "source-map-loader": "^0.2.1",
-    "webpack": "^2.5.1"
+    "webpack": "^2.6.1"
   }
 }
