--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kurse",
-  "version": "0.17.0",
+  "version": "0.18.0",
   "description": "Marks the entity with special trace identification.",
   "main": "kurse.js",
   "support": "kurse.support.js",
@@ -23,7 +23,8 @@
   ],
   "author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
   "contributors": [
-    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+    "Vinse Vinalon"
   ],
   "license": "MIT",
   "bugs": {
@@ -36,7 +37,7 @@
     "een": "^0.19.0",
     "fname": "^0.9.0",
     "harden": "^0.22.0",
-    "mrkd": "^0.6.0",
+    "mrkd": "^0.7.0",
     "nmde": "^0.1.0",
     "protype": "^0.22.0",
     "truly": "^0.19.0",
