--- a/package.json
+++ b/package.json
@@ -1,54 +1,57 @@
 {
-  "name": "kurse",
-  "version": "0.20.0",
-  "description": "Marks the entity with special trace identification.",
-  "main": "kurse.js",
-  "support": "kurse.support.js",
-  "deploy": "kurse.deploy.js",
-  "browser": "kurse.deploy.js",
-  "scripts": {
-    "build": "babel kurse.js --out-file kurse.support.js --source-maps && webpack --progress --display-modules",
-    "test": "mocha kurse-test.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/volkovasystems/kurse.git"
-  },
-  "keywords": [
-    "mark",
-    "entity",
-    "trace",
-    "identity",
-    "kurse"
-  ],
-  "author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
-  "contributors": [
-    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
-    "Vinse Vinalon <vinsevinalon@gmail.com>"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/volkovasystems/kurse/issues"
-  },
-  "homepage": "https://github.com/volkovasystems/kurse#readme",
-  "dependencies": {
-    "babel-runtime": "^6.23.0",
-    "cuid": "^1.3.8",
-    "een": "^0.21.0",
-    "fname": "^0.11.0",
-    "harden": "^0.22.0",
-    "mrkd": "^0.9.0",
-    "nmde": "^0.2.0",
-    "protype": "^0.22.0",
-    "truly": "^0.19.0",
-    "wichevr": "^0.13.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-latest": "^6.24.1",
-    "source-map-loader": "^0.2.1",
-    "webpack": "^3.2.0"
-  }
+	"name": "kurse",
+	"version": "0.21.0",
+	"description": "Marks the entity with special trace identification.",
+	"main": "kurse.js",
+	"support": "kurse.support.js",
+	"deploy": "kurse.deploy.js",
+	"browser": "kurse.deploy.js",
+	"scripts": {
+		"pristine": "rsetmod clean && flxc execute ./.install.sh",
+		"clear": "rsetmod clean --clear",
+		"build": "babel kurse.js --out-file kurse.support.js --source-maps && webpack --progress --display-modules",
+		"pretest": "npm run clear && npm run build",
+		"test": "node kurse-test.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/volkovasystems/kurse.git"
+	},
+	"keywords": [
+		"mark",
+		"entity",
+		"trace",
+		"identity",
+		"kurse"
+	],
+	"author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+	"contributors": [
+		"John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+		"Vinse Vinalon <vinsevinalon@gmail.com>"
+	],
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/volkovasystems/kurse/issues"
+	},
+	"homepage": "https://github.com/volkovasystems/kurse#readme",
+	"dependencies": {
+		"babel-runtime": "^6.25.0",
+		"cuid": "^1.3.8",
+		"een": "^0.23.0",
+		"fname": "^0.13.0",
+		"harden": "^0.23.0",
+		"mrkd": "^0.10.0",
+		"nmde": "^0.5.0",
+		"protype": "^0.24.0",
+		"truly": "^0.20.0",
+		"wichevr": "^0.14.0"
+	},
+	"devDependencies": {
+		"babel-cli": "^6.24.1",
+		"babel-core": "^6.25.0",
+		"babel-plugin-transform-runtime": "^6.23.0",
+		"babel-preset-latest": "^6.24.1",
+		"source-map-loader": "^0.2.1",
+		"webpack": "^3.5.1"
+	}
 }
