--- a/bower.json
+++ b/bower.json
@@ -24,5 +24,16 @@
 		"bower_components",
 		"test",
 		"tests"
-	]
+	],
+	"dependencies": {
+		"cuid": "^1.3.8",
+		"een": "^0.23.0",
+		"fname": "^0.13.0",
+		"harden": "^0.23.0",
+		"mrkd": "^0.11.0",
+		"nmde": "^0.5.0",
+		"protype": "^0.24.0",
+		"truly": "^0.20.0",
+		"wichevr": "^0.14.0"
+	}
 }
